--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
-    <string name="app_name">About me</string>
+    <string name="app_name">Обо мне</string>
+    <string name="b_info_text">Подробная информация</string>
+    <string name="wellcome">Добро пожаловать!</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Отмена</string>
+    <string name="change_info">Изменить сведения</string>
+    <string name="theme">Тема</string>
+    <string name="exit">Выход</string>
+    <string name="invitation">Привет, меня зовут</string>
+    <string name="me_name">Имя</string>
+    <string name="surname">Фамилия</string>
+    <string name="manOrWoman">Мужчина/женщина?</string>
+    <string name="man">Мужчина</string>
+    <string name="woman">Женщина</string>
+    <string name="birthday">Дата рождения</string>
 </resources>
