--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
     <string name="app_name">Обо мне</string>
-    <string name="b_info_text">Подробная информация</string>
-    <string name="wellcome">Добро пожаловать!</string>
+    <string name="b_info_text">Подробнее..</string>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="change_info">Изменить сведения</string>
-    <string name="theme">Тема</string>
     <string name="exit">Выход</string>
     <string name="invitation">Привет, меня зовут</string>
     <string name="me_name">Имя</string>
@@ -21,7 +19,6 @@
     <string name="full_address">Адрес проживания</string>
     <string name="work_and_study">Работа и учеба</string>
     <string name="hobbes_interest">Интересы, увлечения</string>
-    <string name="all_photos">Фотографии</string>
     <string name="phonenumber">Контактный номер телефона</string>
     <string name="email">Электронный адрес</string>
     <string name="what_is_name">Как Вас зовут?</string>
@@ -34,4 +31,15 @@
     <string name="loving_books">Любимые книги</string>
     <string name="loving_movies">Любимые фильмы, сериалы</string>
     <string name="loving_music">Любимая музыка</string>
+    <string name="load_from_storage">Загрузить с диска..</string>
+    <string name="get_from_camera">Получить с камеры</string>
+    <string name="chooser_title">Какое приложение использовать</string>
+    <string name="error_chooser_app">Не установлен файловый менеджер</string>
+    <string name="no_activity_result">Неверный номер результата в onActivityResult()</string>
+    <string name="do_not_pick_birthday">Дата рождения не была выбрана</string>
+    <string name="can_not_load_data">Не удалось загрузить данные</string>
+    <string name="can_not_save_data">Не удалось сохранить данные</string>
+    <string name="year">год</string>
+    <string name="years">года</string>
+    <string name="years2">лет</string>
 </resources>
