--- a/Aboutme/app/src/main/res/values-en/strings.xml
+++ b/Aboutme/app/src/main/res/values-en/strings.xml
@@ -43,4 +43,10 @@
     <string name="year">year</string>
     <string name="years">years</string>
     <string name="years2">years</string>
+    <string name="choose_a_birthday">Choose a birthday</string>
+    <string name="age">Age</string>
+    <string name="loving_hobbis">Hobbies and interests</string>
+    <string name="was_born">Was born</string>
+    <string name="university">Educational establishments</string>
+    <string name="work">Work</string>
 </resources>
