--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="man">Мужчина</string>
     <string name="woman">Женщина</string>
     <string name="birthday">Дата рождения</string>
+    <string name="was_born">Родился</string>
+    <string name="age">Возраст</string>
     <string name="country">Страна проживания</string>
     <string name="city">Город проживания</string>
     <string name="address">Почтовый адрес</string>
@@ -42,4 +44,8 @@
     <string name="year">год</string>
     <string name="years">года</string>
     <string name="years2">лет</string>
+    <string name="choose_a_birthday">Выбор даты рождения</string>
+    <string name="work">Работа</string>
+    <string name="university">Учебные заведения</string>
+    <string name="loving_hobbis">Любимы занятия, хобби</string>
 </resources>
