--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="university">Учебные заведения</string>
     <string name="loving_hobbis">Любимы занятия, хобби</string>
     <string name="welcome_message" tools:ignore="MissingTranslation">%1$s %2$s, %3$d %4$s</string>
+    <string name="title_add_info">Дополнительные сведения</string>
+    <string name="title_settings">Изменение сведений</string>
 </resources>
