--- a/Aboutme/app/src/main/res/values-en/strings.xml
+++ b/Aboutme/app/src/main/res/values-en/strings.xml
@@ -16,7 +16,7 @@
     <string name="city">City</string>
     <string name="country">Country</string>
     <string name="address">Address</string>
-    <string name="full_address">Full Address</string>
+    <string name="full_address">Contacts</string>
     <string name="hobbes_interest">Interests, hobbies</string>
     <string name="main_info">Main information</string>
     <string name="work_and_study">Work and study</string>
