--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="city">Город проживания</string>
     <string name="address">Почтовый адрес</string>
     <string name="main_info">Основная информация</string>
-    <string name="full_address">Адрес проживания</string>
+    <string name="full_address">Контактная информация</string>
     <string name="work_and_study">Работа и учеба</string>
     <string name="hobbes_interest">Интересы, увлечения</string>
     <string name="phonenumber">Контактный номер телефона</string>
