Initial commit. Aboutme-v1.0-alpha with fragments. New: - reconfigure architecture; - based on fragments; - restyle code; - support a work with camera; Bug: camera does not save photos yet.

--- a/Aboutme/app/src/main/res/values-en/strings.xml
+++ b/Aboutme/app/src/main/res/values-en/strings.xml
@@ -50,4 +50,6 @@
     <string name="was_born">Was born %1$s</string>
     <string name="university">Educational establishments</string>
     <string name="work">Work</string>
+    <string name="title_add_info">Detailed info</string>
+    <string name="title_settings">Change info</string>
 </resources>
