--- a/Aboutme/app/src/main/res/values-en/strings.xml
+++ b/Aboutme/app/src/main/res/values-en/strings.xml
@@ -47,9 +47,12 @@
     <string name="choose_a_birthday">Choose a birthday</string>
     <string name="age">Age</string>
     <string name="loving_hobbis">Hobbies and interests</string>
-    <string name="was_born">Was born %1$s</string>
+    <string name="was_born">was born %1$s</string>
     <string name="university">Educational establishments</string>
     <string name="work">Work</string>
     <string name="title_add_info">Detailed info</string>
     <string name="title_settings">Change info</string>
+    <string name="crash_app">Crash app</string>
+    <string name="personal_photo">Personal photo</string>
+    <string name="no_suitable_app">No suitable application found</string>
 </resources>
