--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="man">Мужчина</string>
     <string name="woman">Женщина</string>
     <string name="birthday">Дата рождения</string>
-    <string name="was_born">Родился %1$s</string>
+    <string name="was_born">родился %1$s</string>
     <string name="age">Возраст</string>
     <string name="country">Страна проживания</string>
     <string name="city">Город проживания</string>
@@ -53,4 +53,7 @@
     <string name="title_add_info">Дополнительные сведения</string>
     <string name="title_settings">Изменение сведений</string>
     <string name="crash_app">Крешнуть приложение</string>
+    <string name="personal_photo">Личное фото</string>
+    <string name="no_suitable_app">Не найдено подходящее приложение</string>
+    <string name="fileprovider_authority">iv.nakonechnyi.aboutme.fileprovider</string>
 </resources>
