--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -55,5 +55,5 @@
     <string name="crash_app">Крешнуть приложение</string>
     <string name="personal_photo">Личное фото</string>
     <string name="no_suitable_app">Не найдено подходящее приложение</string>
-    <string name="fileprovider_authority">iv.nakonechnyi.aboutme.fileprovider</string>
+    <string name="fileprovider_authority" translatable="false">iv.nakonechnyi.aboutme.fileprovider</string>
 </resources>
