New refactoring:  - now photos are picked in Settings  - added a container RecyclerView for photos  - remove a context menu from the main screen

--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -56,4 +56,10 @@
     <string name="personal_photo">Личное фото</string>
     <string name="no_suitable_app">Не найдено подходящее приложение</string>
     <string name="fileprovider_authority" translatable="false">iv.nakonechnyi.aboutme.fileprovider</string>
+    <string name="choose_source">Выберите источник:</string>
+
+    <string-array name="dialog_items">
+        <item>@string/load_from_storage</item>
+        <item>@string/get_from_camera</item>
+    </string-array>
 </resources>
