--- a/Aboutme/app/src/main/res/values/strings.xml
+++ b/Aboutme/app/src/main/res/values/strings.xml
@@ -1,66 +1,69 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Обо мне</string>
-    <string name="b_info_text">Подробнее..</string>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="app_name">About me</string>
+    <string name="b_info_text">More details..</string>
+    <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
-    <string name="cancel">Отмена</string>
-    <string name="change_info">Изменить сведения</string>
-    <string name="exit">Выход</string>
-    <string name="invitation">Привет, меня зовут</string>
-    <string name="me_name">Имя</string>
-    <string name="surname">Фамилия</string>
-    <string name="manOrWoman">Мужчина/женщина?</string>
-    <string name="man">Мужчина</string>
-    <string name="woman">Женщина</string>
-    <string name="birthday">Дата рождения</string>
-    <string name="was_born">родился %1$s</string>
-    <string name="age">Возраст</string>
-    <string name="country">Страна проживания</string>
-    <string name="city">Город проживания</string>
-    <string name="address">Почтовый адрес</string>
-    <string name="main_info">Основная информация</string>
-    <string name="full_address">Контактная информация</string>
-    <string name="work_and_study">Работа и учеба</string>
-    <string name="hobbes_interest">Интересы, увлечения</string>
-    <string name="phonenumber">Контактный номер телефона</string>
-    <string name="email">Электронный адрес</string>
-    <string name="what_is_name">Как Вас зовут?</string>
-    <string name="what_is_surname">Ваша фамилия?</string>
-    <string name="social_pages">Странички в соцсетях</string>
-    <string name="save">Сохранить</string>
-    <string name="where_work">Расскажите, где Вы работали и/или работаете</string>
-    <string name="where_study">А где Вы учились?</string>
-    <string name="you_loving_hobbies">Ваши самые любимые занятия, хобби</string>
-    <string name="loving_books">Любимые книги</string>
-    <string name="loving_movies">Любимые фильмы, сериалы</string>
-    <string name="loving_music">Любимая музыка</string>
-    <string name="load_from_storage">Загрузить с диска..</string>
-    <string name="get_from_camera">Получить с камеры</string>
-    <string name="chooser_title">Какое приложение использовать</string>
-    <string name="error_chooser_app">Не установлен файловый менеджер</string>
-    <string name="no_activity_result">Неверный номер результата в onActivityResult()</string>
-    <string name="do_not_pick_birthday">Дата рождения не была выбрана</string>
-    <string name="can_not_load_data">Не удалось загрузить данные</string>
-    <string name="can_not_save_data">Не удалось сохранить данные</string>
-    <string name="cant_create_file_image">Не получилось создать файл изображения</string>
-    <string name="year">год</string>
-    <string name="years">года</string>
-    <string name="years2">лет</string>
-    <string name="choose_a_birthday">Выбор даты рождения</string>
-    <string name="work">Работа</string>
-    <string name="university">Учебные заведения</string>
-    <string name="loving_hobbis">Любимы занятия, хобби</string>
-    <string name="welcome_message" translatable="false">%1$s %2$s, %3$d %4$s</string>
-    <string name="title_add_info">Дополнительные сведения</string>
-    <string name="title_settings">Изменение сведений</string>
-    <string name="crash_app">Крешнуть приложение</string>
-    <string name="personal_photo">Личное фото</string>
-    <string name="no_suitable_app">Не найдено подходящее приложение</string>
+    <string name="change_info">Change info</string>
+    <string name="exit">Exit</string>
+    <string name="invitation">Hello, my name is</string>
+    <string name="me_name">Name</string>
+    <string name="man">Man</string>
+    <string name="manOrWoman">Man or Woman?</string>
+    <string name="surname">Surname</string>
+    <string name="woman">Woman</string>
+    <string name="birthday">Birthday</string>
+    <string name="city">City</string>
+    <string name="country">Country</string>
+    <string name="address">Address</string>
+    <string name="full_address">Contacts</string>
+    <string name="hobbes_interest">Interests, hobbies</string>
+    <string name="main_info">Main information</string>
+    <string name="work_and_study">Work and study</string>
+    <string name="email">E-mail</string>
+    <string name="phonenumber">Contact phonenumber</string>
+    <string name="save">Save</string>
+    <string name="social_pages">Social pages</string>
+    <string name="what_is_name">What is your name?</string>
+    <string name="what_is_surname">What is your surname?</string>
+    <string name="loving_books">Loving books</string>
+    <string name="loving_movies">Loving movies, serials</string>
+    <string name="loving_music">Loving music</string>
+    <string name="where_study">And where did you study?</string>
+    <string name="where_work">Tell, where did you work or are working?</string>
+    <string name="you_loving_hobbies">Your the best hobbies, interests</string>
+    <string name="get_from_camera">Get from camera</string>
+    <string name="load_from_storage">Load from storage..</string>
+    <string name="chooser_title">What app to use</string>
+    <string name="error_chooser_app">Do not install a FileManager</string>
+    <string name="no_activity_result">Result of onActivityResult() is incorrect</string>
+    <string name="can_not_load_data">Data loading is failed</string>
+    <string name="can_not_save_data">Data saving is failed</string>
+    <string name="cant_create_file_image">Failed to create an image file</string>
+    <string name="do_not_pick_birthday">A birthday does not choose</string>
+    <string name="year">year</string>
+    <string name="years">years</string>
+    <string name="years2">years</string>
+    <string name="choose_a_birthday">Choose a birthday</string>
+    <string name="age">Age</string>
+    <string name="loving_hobbis">Hobbies and interests</string>
+    <string name="was_born">was born %1$s</string>
+    <string name="university">Educational establishments</string>
+    <string name="work">Work</string>
+    <string name="title_add_info">Detailed info</string>
+    <string name="title_settings">Change info</string>
+    <string name="crash_app">Crash app</string>
+    <string name="personal_photo">Personal photo</string>
+    <string name="no_suitable_app">No suitable application found</string>
+    <string name="choose_source">Choose source</string>
+    <string name="personal_photos">Personal photos</string>
+    <string name="hello_amigo">Hello, amigo!</string>
     <string name="fileprovider_authority" translatable="false">iv.nakonechnyi.aboutme.fileprovider</string>
-    <string name="choose_source">Выберите источник</string>
-    <string name="personal_photos">Личные фото</string>
+    <string name="welcome_message" translatable="false">%1$s %2$s, %3$d %4$s</string>
 
     <string-array name="dialog_items">
         <item>@string/load_from_storage</item>
         <item>@string/get_from_camera</item>
     </string-array>
+
 </resources>
