Fix a problem with permissions, make refactoring of code

--- a/Aboutme/app/src/main/res/values-ru/strings.xml
+++ b/Aboutme/app/src/main/res/values-ru/strings.xml
@@ -57,4 +57,7 @@
     <string name="choose_source">Выберите источник</string>
     <string name="personal_photos">Личные фото</string>
     <string name="hello_amigo">Привет, амиго!</string>
+    <string name="was_born2">родилась %1$s</string>
+    <string name="explanation_for_perms_camera">Приложению требуются разрешения на чтение и запись фотографий с/на диск</string>
+    <string name="explanation_for_perms_read_storage">Приложению требуется разрешение на чтение с фотографий с диска</string>
 </resources>
