--- a/NewsFeeder/app/src/main/res/values/strings.xml
+++ b/NewsFeeder/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
 
     <string name="news_apiKey" translatable="false">40f5a3b9ae834b2395af75738ccaca3b</string>
     <string name="news_api_baseUrl" translatable="false">https://newsapi.org/v2/</string>
+    <string name="require_news_filter">You should choose a request filter</string>
 
 
 </resources>
